create github pages

--- a/page4.html
+++ b/page4.html
@@ -36,7 +36,7 @@
                         <img src="assets/images/1-96x96.png" alt="Mobirise" style="height: 3.8rem;">
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://mobiri.se">Equipo 10</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="index.html">Equipo 10</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header3 cid-s9LpEQfIT5 mbr-fullscreen" id="header3-17">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header3 cid-s9LpEQfIT5 mbr-fullscreen" id="header3-17">
 
     
 
