--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@
                         <img src="assets/images/1-96x96.png" alt="Mobirise" style="height: 3.8rem;">
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://mobiri.se">Equipo 10</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="index.html">Equipo 10</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="header12 cid-s9Li6aq2Gc" id="header12-12">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="header12 cid-s9Li6aq2Gc" id="header12-12">
 
     
 
