--- a/page5.html
+++ b/page5.html
@@ -49,8 +49,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">
-                            Caso clínico</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html">
-                            Información</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html" aria-expanded="false">
+                            Caso clínico</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html" aria-expanded="false">
                             Entregables</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html" aria-expanded="false">
                             Repositorio bibliográfico</a></li></ul>
                 
@@ -61,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header12 cid-s9LmeAlM1T" id="header12-14">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header12 cid-s9LmeAlM1T" id="header12-14">
 
     
 
@@ -120,13 +119,13 @@
             </div>
             <div class="col-6 col-md-4 col-lg-3">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <a href="page4.html" class="text-white"><strong>Datos y Cifras</strong></a></h5>
+                    <a href="page3.html" class="text-white text-primary"><strong>Entregables</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page3.html" class="text-white"><strong>Entregables</strong></a></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page5.html" class="text-white"><strong>Bibliografía</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
