create github pages

--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
 
     
 
@@ -128,7 +128,7 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/team3-1.jpg">
+                        <img src="assets/images/whatsapp-image-2020-09-08-at-4.26.20-pm-695x475.jpeg" alt="">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
