create github pages

--- a/page5.html
+++ b/page5.html
@@ -36,7 +36,7 @@
                         <img src="assets/images/1-96x96.png" alt="Mobirise" style="height: 3.8rem;">
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="index.html">Equipo 10</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="index.html">T'inki</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header12 cid-s9LmeAlM1T" id="header12-14">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header12 cid-s9LmeAlM1T" id="header12-14">
 
     
 
