create github pages

--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
     
 
     
@@ -103,7 +103,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="page1.html"><img src="assets/images/mbr-1-1049x699.jpeg" alt=""></a>
+                        <a href="page1.html"><img src="assets/images/foto-grupal-517x387.jpg" alt=""></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -117,7 +117,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1-517x365.jpeg" alt="">
+                        <a href="page6.html"><img src="assets/images/mbr-1-517x365.jpeg" alt=""></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
