create github pages

--- a/page13.html
+++ b/page13.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2o">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2o">
 
     
     
