create github pages

--- a/page10.html
+++ b/page10.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2i">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2i">
 
     
     
