--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header5 cid-sapsypK46x mbr-fullscreen" id="header5-25">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header5 cid-sapsypK46x mbr-fullscreen" id="header5-25">
 
     
 
@@ -72,7 +72,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Contexto socioeconómico y descripción</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">Se explicará a fondo el problema general y se definirá el problema específico a tratar.</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="page7.html">Contexto económico</a> <a class="btn btn-warning-outline display-7" href="https://mobiri.se">Contexto social</a>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="page7.html">Contexto económico</a> <a class="btn btn-warning-outline display-7" href="page8.html">Contexto social</a>
                     <a class="btn btn-warning display-7" href="page9.html">Descripción el problema</a></div>
             </div>
         </div>
