--- a/page15.html
+++ b/page15.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2s">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2s">
 
     
     
