--- a/page7.html
+++ b/page7.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-27">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-27">
 
     
     
