--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
 
     
 
@@ -87,6 +87,24 @@
                 <p class="mbr-text align-center mbr-fonts-style my-4 display-5">
                     <em>T'inki es unión. Es ayudar. Es buscar nexos para mejorar la situación de los demás</em></p>
                 <hr class="line">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="video2 cid-savPCw8T3x" id="video2-2u">
+    
+    <div class="container">
+        <div class="mbr-section-head">
+            <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2">
+                <strong>Cifras en tiempo real</strong></h4>
+            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Infórmate del número de casos a nivel mundial</h5>
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-12 col-md-10 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/NMre6IAAAiU?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=NMre6IAAAiU" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <p class="mbr-text pt-2 mbr-fonts-style display-4">
+                    Fuente:&nbsp;</p>
             </div>
         </div>
     </div>
@@ -186,6 +204,7 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/playervimeo/vimeo_player.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
