--- a/page1.html
+++ b/page1.html
@@ -50,7 +50,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">
-                            Caso clínico</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html" aria-expanded="false">
+                            Caso clínico</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page16.html" aria-expanded="false">
+                            Información general</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html" aria-expanded="false">
                             Entregables</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html" aria-expanded="false">
                             Repositorio bibliográfico</a></li></ul>
                 
@@ -61,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
 
     
 
