--- a/page8.html
+++ b/page8.html
@@ -49,7 +49,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">
-                            Caso clínico</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html" aria-expanded="false">
+                            Caso clínico</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page16.html" aria-expanded="false">
+                            Información general</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html" aria-expanded="false">
                             Entregables</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html" aria-expanded="false">
                             Repositorio bibliográfico</a></li></ul>
                 
@@ -60,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header12 cid-sapw7D5zx5 mbr-parallax-background" id="header12-2c">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="header12 cid-sapw7D5zx5 mbr-parallax-background" id="header12-2c">
 
     
 
@@ -103,7 +104,7 @@
             <div class="col-md-12 col-lg-10">
                 <hr class="line">
                 <p class="mbr-text align-center mbr-fonts-style my-4 display-5">
-                    <em>Haz clic en la imagen para poder explorar estos aspectos a profundidad</em></p>
+                    <em>Haga clic en la imagen para poder explorar estos aspectos a profundidad</em></p>
                 <hr class="line">
             </div>
         </div>
