create github pages

--- a/page14.html
+++ b/page14.html
@@ -64,7 +64,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header7 cid-sawZymP6aH mbr-fullscreen" id="header7-34">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header7 cid-sawZymP6aH mbr-fullscreen" id="header7-34">
 
     
 
@@ -73,7 +73,7 @@
     <div class="text-right container">
         <div class="row justify-content-end">
             <div class="col-12 col-lg-5">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Informalidad</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Trabajo informal</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">En constante aumento</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="https://view.genial.ly/5f5e29be1fa4080d6b4f7952/interactive-image-impacto-social-covid-19">Volver a la imagen interactiva</a></div>
