--- a/page9.html
+++ b/page9.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2b">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-2b">
 
     
     
