create github pages

--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
 
     
 
