--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
     
 
     
@@ -69,7 +69,7 @@
         <div class="row justify-content-center">
             <div class="col-12">
                 <h3 class="mbr-section-title mbr-white mbr-fonts-style display-1">
-                    <strong>Nuestro proyecto</strong></h3>
+                    <strong>Nuestro futuro proyecto</strong></h3>
                 <p class="mbr-text mbr-fonts-style mbr-white mb-4 display-1"></p>
             </div>
         </div>
