create github pages

--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
 
     
 
@@ -228,11 +228,11 @@
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-10">
                 <ul class="nav nav-tabs mb-4" role="tablist">
-                    <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab0" aria-selected="true"><strong>Coordinación</strong></a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab1" aria-selected="true"><strong>Investigación</strong></a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab2" aria-selected="true"><strong>Modelado 3D</strong></a></li>
+                    <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab0" aria-selected="true"><strong>Coordinación general</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab1" aria-selected="true"><strong>Investigación, datos y estadísticas</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab2" aria-selected="true"><strong>Diseño y Modelado 3D</strong></a></li>
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab3" aria-selected="true"><strong>Diseño Web</strong></a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab4" aria-selected="true"><strong>Redacción</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab4" aria-selected="true"><strong>Redacción y estructura</strong></a></li>
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-22_tab5" aria-selected="true"><strong>Información</strong></a></li>
                 </ul>
                 <div class="tab-content">
@@ -247,10 +247,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-                                    Mobile web traffic overtook desktop one in 2016 and will only grow, and that's why
-                                    it's important to create websites that look good on all devices. No special actions
-                                    required, all sites you make with the Builder are mobile-friendly. You don't have to
-                                    create a special mobile version of your website, it will adapt automagically. </p>
+                                    Responsable de revisar los diversos datos o estadísticas encontrados durante la investigación. Se asegura, junto a la coordinadora de redacción, de que los datos sean correctos.</p>
                             </div>
                         </div>
                     </div>
@@ -283,7 +280,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-                                    Responsable de revisar los diversos datos o estadísticas encontrados durante la investigación. Se asegura, junto a la coordinadora de redacción, de que los datos sean correctos</p>
+                                    Organización de los datos recopilados por el equipo.<br>Verificación de la confiabilidad de los recursos utlizados.<br>Verificación de la vigencia de los datos utilizados.</p>
                             </div>
                         </div>
                     </div>
