create github pages

--- a/page12.html
+++ b/page12.html
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header5 cid-sbajACck9I mbr-fullscreen" id="header5-9g">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="header5 cid-sbajACck9I mbr-fullscreen" id="header5-9g">
 
     
 
@@ -291,7 +291,7 @@
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
                     Medly</strong></h4>
-                <p class="mbr-text mbr-fonts-style display-7">Este es un software gratuito que permite a los pacientes y a los médicos monitorear el estado de la enfermedad de insuficiencia cardiaca (IC) del paciente. Se ha demostrado que el uso de Medly reduce la IC y las hospitalizaciones por cualquier causa con una mejora en la calidad de vida relacionada con la IC. Este programa utiliza una aplicación de teléfono móvil, una báscula y un brazalete de presión sanguínea para controlar el peso, los signos vitales y los síntomas del paciente. [6] A su vez, ofrece data en tiempo real y relevante para los médicosque lo utilizan, permitiendo una toma de desiciones efectiva.<br><br><strong>Ventaja: Es una aplicación gratuita, que puede aportar con sus funcionalidades.<br>Desventaja: No se encuentra disponible para su descarga en el Perú</strong><br></p>
+                <p class="mbr-text mbr-fonts-style display-7">Este es un software gratuito que permite a los pacientes y a los médicos monitorear el estado de la enfermedad de insuficiencia cardiaca (IC) del paciente. Se ha demostrado que el uso de Medly reduce la IC y las hospitalizaciones por cualquier causa con una mejora en la calidad de vida relacionada con la IC. Este programa utiliza una aplicación de teléfono móvil, una báscula y un brazalete de presión sanguínea para controlar el peso, los signos vitales y los síntomas del paciente. [6] A su vez, ofrece data en tiempo real y relevante para los médicos que lo utilizan, permitiendo una toma de decisiones efectiva.<br><br><strong>Ventaja: Es una aplicación gratuita, que puede aportar con sus funcionalidades.<br>Desventaja: No se encuentra disponible para su descarga en el Perú</strong><br></p>
             </div>
         </div>
     </div>
