create github pages

--- a/page12.html
+++ b/page12.html
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="header5 cid-sbajACck9I mbr-fullscreen" id="header5-9g">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header5 cid-sbajACck9I mbr-fullscreen" id="header5-9g">
 
     
 
@@ -245,7 +245,7 @@
             <div class="col-md-12 col-lg-10">
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>Oxímetro de pulso tipo anillo</strong></h4>
-                <p class="mbr-text mbr-fonts-style display-7">En las últimas décadas se discutió el diseño óptimo de un oxímetro de pulso, ya que el movimiento durante la medición era un inconveniente. Se discutió la eficiencia de los oxímetros de pulso de tipo anillo con un solo detector y un detector múltiple [2] y resultó proporcionar la mejor eficiencia para medir la SPO2, no obstante, su costo es considerablemente mayor a otros oxímetros.&nbsp;<br><br><strong>Ventaja: </strong>Menos riesgo de error de medición que el oxímetro de pulso<br><strong>Desventaja: </strong>Precio significativamente mayor que el oxímetro de pulso<br></p>
+                <p class="mbr-text mbr-fonts-style display-7">En las últimas décadas se discutió el diseño óptimo de un oxímetro de pulso, ya que el movimiento durante la medición era un inconveniente. Se discutió la eficiencia de los oxímetros de pulso de tipo anillo con un solo detector y un detector múltiple [2] y resultó proporcionar la mejor eficiencia para medir la SPO2, no obstante, su costo es considerablemente mayor a otros oxímetros.&nbsp;<br><br><strong>Ventaja: </strong>Menos riesgo de error de medición que el oxímetro de pulso tipo dedo<br><strong>Desventaja: </strong>Precio significativamente mayor que el oxímetro de pulso tipo dedo<br></p>
             </div>
         </div>
     </div>
