create github pages

--- a/page12.html
+++ b/page12.html
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header5 cid-sbajACck9I mbr-fullscreen" id="header5-9g">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header5 cid-sbajACck9I mbr-fullscreen" id="header5-9g">
 
     
 
@@ -260,7 +260,7 @@
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
                     Oxitone 1000M [3]</strong></h4>
                 <p class="mbr-text mbr-fonts-style display-7">Este es un oxímetro de muñeca, que&nbsp; además puede detectar el radio respiratorio, temperatura de la piel, movimiento y patrones de sueño de quien lo usa. El dispositivo es preciso y exacto, como se pudo ver en un estudio donde se midió y cómparo con otros similares. A partir de este resultó una tasa de precisión de 2,28472% para las mediciones de SpO2 y el pulso durante las actividades diarias de pacientes con Enfermedad Pulmonar Obstructiva Crónica [4], y no es inferior a los dispositivos estándar para el control puntual o los exámenes de corta duración. Su diseño de sensor de muñeca es cómodo y proporciona la ventaja del uso extendido.
-<br><br><strong>Ventaja:&nbsp; </strong>Los datos medidios se pueden almacenar via aplicación de celular, mostrándolos a manera de historial.<br><strong>Desventaja: </strong>No se encuentra disponible en el país.<br></p>
+<br><br><strong>Ventaja:&nbsp; </strong>Los datos medidos se pueden almacenar via aplicación de celular, mostrándolos a manera de historial.<br><strong>Desventaja: </strong>No se encuentra disponible en el país.<br></p>
             </div>
         </div>
     </div>
