create github pages

--- a/page13.html
+++ b/page13.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen" id="header18-aa">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen" id="header18-aa">
 
     
 
@@ -184,8 +184,8 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
-                        <strong>Estrategia 1:</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7"><br></p>
+                        <strong>Estrategia 1: Dispositivo <em>wearable </em>para el monitoreo constante del paciente COVID</strong><strong><br></strong></h3>
+                    <p class="mbr-text mbr-fonts-style display-7">En Perú, alrededor del 80% de casos son asintomáticos[1].Además, alrededor de 1 de cada 5 personas que contraen la COVID-19 acaba presentando un cuadro grave y experimenta dificultades para respirar.[2]<br>Con el fin de evitar futuras complicaciones del paciente, se requiere la posibilidad de contar con grandes colecciones continuas de datos que permitan llevar para cada paciente estadísticas relevantes y personalizadas en relación con cambios en las tendencias de parámetros fisiológicos y de salud en general a corto y largo plazo. Por ello, planteamos un dispositivo de monitoreo continuo a través de la medición de signos vitales a partir de un artefacto no invasivo y de fácil uso ubicado en la sien dado que es uno de los mejores sitios para medir el SpO2 debido a su alta visibilidad del suministro de sangre[3].<br>Esta estrategia recolecta las características de diferentes estados del arte(Biosensor Patch, Oxitone 1000M, etc) para hacer del dispositivo más eficiente ya sea por el tamaño, peso y la adición de más funcionalidades para un seguimiento completo del estado del paciente. Los resultados se mostrarán en los diferentes aparatos electrónicos conectados mediante vía bluetooth haciendo de este los registre y cree un historial para el paciente.</p>
                 </div>
             </div>
         </div>
@@ -209,7 +209,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Estrategia 2: Tecnología asistencial para el monitoreo de signos vitales</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Viendo la situación desde una perspectiva más estática, proponemos una estrategia que implica un dispositivo autónomo e inteligente basado en un monitoreo asistido de los signos vitales. Tomamos como referencia el funcionamiento del dispositivo de Amazon, Echo Dot, el cual utiliza un interfaz intuitivo e interactivo para relacionarse con el usuario[1 ]. Además tomamos en cuenta la existencia de los espejos inteligentes dirigidos con aplicación hacia la medicina personalizada[2], los diferentes estudios acerca de estos dispositivos demuestran sus beneficios en diferentes campos, con monitoreos pasivos, dinámicos, biomarcadores, telemedicina y salud. 
+                    <p class="mbr-text mbr-fonts-style display-7">Viendo la situación desde una perspectiva más estática, proponemos una estrategia que implica un dispositivo autónomo e inteligente basado en un monitoreo asistido de los signos vitales. Tomamos como referencia el funcionamiento del dispositivo de Amazon, Echo Dot, el cual utiliza un interfaz intuitiva e interactivo para relacionarse con el usuario [4]. Además tomamos en cuenta la existencia de los espejos inteligentes dirigidos con aplicación hacia la medicina personalizada[5], los diferentes estudios acerca de estos dispositivos demuestran sus beneficios en diferentes campos, con monitoreos pasivos, dinámicos, biomarcadores, telemedicina y salud. 
 <br>
 <br>Nuestro dispositivo tiene la capacidad de interactuar con el paciente, actúa como un asistente capaz de brindar recordatorios para la toma de medidas de signos vitales, los cuáles serán almacenados en un registro y comparados con los valores estándares para que el paciente pueda tener conocimiento exacto de su estado actual; además este podrá solicitar una comparación de sus medidas más recientes. Estos datos no solo serán almacenados en el dispositivo, sino que también podrán transferirse a un celular o computadora. 
 <br>
@@ -237,11 +237,11 @@
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
-                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Estrategia 3: Familia de sensores para medición de parámetros mediante de un dispositivo móvil
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Estrategia 3: Conjunto de sensores para medición de parámetros mediante de un dispositivo móvil
 </strong><div><strong><br></strong></div></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Esta estrategia se enfoca en la medición de señales a través de un grupo de sensores que miden la saturación de oxígeno, temperatura y sonidos pulmonares, cuenta con almacenamiento de datos de las mediciones. Cada uno de estos contarán con una salida USB y se conectarán al puerto tipo C del celular mediante un adaptador hub usb.&nbsp;<br><br>Los sensores no tienen memoria propia ni batería. Para que el almacenamiento sea posible, requiere conectarse a un dispositivo móvil para funcionar y también poder guardar los datos de las mediciones en una aplicación.&nbsp;<br>
+                    <p class="mbr-text mbr-fonts-style display-7">Esta estrategia se enfoca en la medición de señales a través de un grupo de sensores que miden la saturación de oxígeno, temperatura y sonidos pulmonares, cuyos resultados podrán ser almacenados y registrados. Cada uno de estos contarán con una salida USB y se conectarán al puerto tipo C del celular mediante un adaptador hub usb.&nbsp;&nbsp;<br><br>Los sensores no tienen memoria propia ni batería. Para que el almacenamiento sea posible, requiere conectarse a un dispositivo móvil para funcionar y también poder guardar los datos de las mediciones en una aplicación.&nbsp;<br>
 <br>Además, la aplicación enviará recordatorios para el registro de medición del paciente según la frecuencia que un médico le indique. Y en el caso de que los niveles de alguna medición salgan de un umbral preestablecido la misma aplicación enviaría una alerta al médico tratante, significando que requiere mayor prioridad de atención.
-<br></p>
+<br><br>Cabe mencionar que los patrones elegidos son aquellos que pueden tener mayor impacto en el paciente asintomático [6].</p>
                 </div>
             </div>
         </div>
