create github pages

--- a/page13.html
+++ b/page13.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen" id="header18-aa">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen" id="header18-aa">
 
     
 
@@ -272,7 +272,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-12">
                 <div class="image-wrapper">
-                    <img src="assets/images/cuadro-1165x536.jpg" alt="Mobirise">
+                    <img src="assets/images/estrategia-cuadro-1144x584.jpg" alt="Mobirise">
                     
                 </div>
             </div>
